<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.no0ne.appointmentsystem.ui.TeacherInfoActivity">

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/personal_info" />

        <ImageView
            android:id="@+id/image_view_teacher"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/man" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edit_text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edit_text_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/counselling_hour" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:entries="@array/array_days"
                android:textAlignment="center">
            </Spinner>

            <EditText
                android:id="@+id/edit_text_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:textAlignment="center"
                android:hint="@string/from" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/edit_text_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:hint="@string/to" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_show_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/show" />

            <Button
                android:id="@+id/button_add_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
