<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#0277BD"
    tools:context="com.example.no0ne.appointmentsystem.ui.MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/calendar_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/appointment_system" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/text_view_divider" />

        <TextView
            android:id="@+id/text_view_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/sign_in" />
    </LinearLayout>

</LinearLayout>
